src/test/resources/valid/full-pair-type/printNullPair.wacc
# print pair a null pair

# Output:
# (nil)

# Program:

begin
  pair(pair(int,int), pair(int,int)) p = null ;
  println p
end
